2008-04-20  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-interp.c (syx_interp_enter_context): missed saving this_context

	* syx/syx-primitives.c (ContextPart_receiver): added
	(BlockContext_outerContext): added

	* st/kernel/BlockContext.st (outerContext, homeContext): 

	* st/kernel/ContextPart.st (tracebackString):

        * syx/syx-interp.h (struct SyxInterpFrame): add closure

        * syx/syx-object.h: updated accessors
        All calls have been updated.

        * syx/syx-enums.h (enum): add ContextPart enums

        * st/kernel/initialDecl.st: move receiver to MethodContext and add framePointer to ContextPart

        * syx/syx-interp.c (syx_interp_frame_to_context): made public
        (syx_interp_frame_to_context): use closure

        * syx/syx-primitives.c (_syx_primitive_entries):
        (ContextPart_parent): added

        * syx/syx-parser.c (_syx_parser_find_temporary_name): cleaned up, fixes the command line interactive interpreter

        * st/kernel/Console.st (nextLine):

        * syx/syx-interp.c (_syx_interp_switch_process): only switch if it's a different process

        * syx/syx-interp.h (struct SyxInterpState): added process
        All calls have been updated to use this new member.

        All tests now works just like the trunk. Have to do more work on the scheduler, though.
        
        * syx/syx-interp.h (struct SyxInterpState): removed process_frame

        * syx/syx-object.c (syx_process_new): initialize bottome frame

        * syx/syx-primitives.c: updated to match new interpreter internal API
        
        * syx/syx-interp.c (_syx_interp_switch_process): fix fetching the frame
        Refactor most of the functions to request state/process arguments to work concurrency
        on different processes and execution states.
        Claned up everything, yet another slightly speedup.
        All calls have been updated.

2008-04-18  Luca Bruno  <lethalman88@gmail.com>
