@@ -1,6 +1,7 @@
 2008-04-20  Luca Bruno  <lethalman88@gmail.com>
 
 	* syx/syx-interp.c (syx_interp_enter_context): missed saving this_context
+	(syx_interp_context_to_frame): added
 
 	* syx/syx-primitives.c (ContextPart_receiver): added
 	(BlockContext_outerContext): added
